# sysfonts

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
cmake/: utils.cmake
include/sysfonts/: SF_defines.h  sysfonts.h
src/: SF_sysfonts.c
src/impl/: SF_linux.c  SF_macos.c  SF_windows.c
sysfonts/: CMakeLists.txt
sysfonts/include/sysfonts/: SF_defines.h  sysfonts.h
sysfonts/src/: SF_sysfonts.c
sysfonts/src/impl/: SF_linux.c  SF_windows.c
test/: CMakeLists.txt  main.c
